# Feather-Mod-Auth

./: .gitignore  Cargo.toml  build.rs  docker-compose.yml  package.json  sqlx-data.json  tailwind.config.js
config/: Default.toml
migrations/: 20210321195828_initial.sql  20210523105455_tokens.sql  20210526153347_oauth_basic.sql
src/: main.rs  state.rs
src/config/: mod.rs
src/models/: mod.rs  user.rs
src/models/oauth/: authorization.rs  mod.rs  oauth_client.rs  refresh_token.rs
src/models/validators/: mod.rs
src/models/validators/oauth/: oauth_client.rs
src/routes/: home.rs  mod.rs  web.rs
src/routes/api/: mod.rs  register.rs
src/routes/oauth2/: mod.rs
src/routes/web/: home.rs  mod.rs  register.rs
src/state/: handlebars_utils.rs  mod.rs  session.rs
src/state/config/: mod.rs
src/utils/: error.rs  handlebars_utils.rs  id.rs  mod.rs  password_hashing.rs
src/utils/jwt/: auth_token.rs  id_token.rs  mod.rs
templates/: base.html  index.html  main.handlebars  register.handlebars  register_prompt.html
zoho-transmail/: Cargo.toml
zoho-transmail/src/: lib.rs
