[package]
name = "minos-auth"
version = "0.1.0"
authors = ["Redblueflame <contact@redblueflame.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
sodiumoxide = "0.2.6"
dotenv = "0.15"
sqlx = { version = "0.4.2", features = ["runtime-actix-rustls", "postgres", "chrono", "offline", "macros", "migrate", "uuid"] }
anyhow = "1.0.38"
thiserror = "1.0.24"
serde = "1.0.124"
serde_json = "1.0.64"
handlebars = { version = "3.5.3", features = ["dir_source"] }
log = "0.4.14"
env_logger = "0.8.3"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
async-trait = "0.1.48"
actix-multipart = "0.3.0"
toml = "0.5.8"
config = "0.11"
dashmap = "4.0"