[package]
name = "zoho-transmail"
version = "0.1.0"
authors = ["Redblueflame <contact@redblueflame.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
reqwest = "0.11.3"
serde_json = "1.0.64"
thiserror = "1.0.25"